--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -14,11 +14,17 @@
 
 @primary-color: #FF9E9E; // primary color for all components
 @secondary-color: #151517; 
-@success-color: #1db100;
-@warning-color: #faad14; // warning state color
+@success-color: #599504;
+@warning-color: #E8A23A; // warning state color
 @error-color: #f5222d; // error state color
+@grey-color: #C4C4C4;
 
 @sidebar-bg: #FFF2F2;
+@tab-bg: #F8A6A6;
+@silver-bg: #FAFAFA;
+@card-bg: #FFF2F2;
+@light-bg: #FBFBFB;
+@tooltip-icon: #4D4D4D;
 
 @font-family: 'Inter', sans-serif;
 @font-family-secondary: 'Ubuntu', sans-serif;
@@ -27,13 +33,14 @@
 @font-size-lg: @font-size-base + 2px; //16px
 @font-size-sm: @font-size-base - 2px; //12px
 
-@text-color-primary: #ffffff; // major text color
-@text-color-secondary: #B5EBFF; // secondary text color
+@text-color-primary: #363636; // major text color
+@text-color-secondary: #000000; // secondary text color
 @text-red: #d90a00; // Red text color
 @text-white: #ffffff; // white text color
 @link-color: @primary-color; // link color
 @disabled-color: rgba(0, 0, 0, 0.1); // disable state color
 @border-radius-base: 4px; // major border radius
-@border-color-base: #07366F; // major border color
+@border-color-base: #000000; // major border color
+@border-color-light: #151517;
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 
