--- a/src/containers/NavigationBar/index.less
+++ b/src/containers/NavigationBar/index.less
@@ -1,17 +1,18 @@
 @import "../../assets/less/variables.less";
 
-.top-bar{
+.header{
     background: @secondary-color;
     color: @white;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 60px;
     .logo{
         font-size: 26px;
+        height: 100%;
     }
     .top-bar-right{
         font-size: 26px;
+        height: 100%;
     }
 }
