--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -64,15 +64,65 @@ h4{
 
 p{
   font-size: @font-size-base + 2;
-  color: @text-color-secondary;
+  color: @text-color-primary;
 }
 
-.main-wrapper{
-  .main-wrapper-inner{
-    display: flex;
-    .right-content-wrapper{
-      width: 100%;
-      padding: 20px;
+.ant-btn{
+  &.ant-btn-primary{
+    background: @primary-color;
+    border: 1px solid @border-color-base;
+    color: @black;
+    border-radius: 4px;
+  }
+}
+
+.ant-select{
+  &:not(.ant-select-customize-input){
+    .ant-select-selector{
+      height: 40px;
+      line-height: 40px;
+      background-color: @card-bg;
+      color: @black;
+      border: 1px solid @black;
+      border-radius: 6px;
+      &:hover, &:focus{
+        border: 1px solid @black;
+      }
+      input{
+        height: 40px !important;
+        line-height: 100%;
+      }
+      .ant-select-selection-item{
+        line-height: 38px;
+      }
+      .ant-select-selection-placeholder{
+        line-height: 38px;
+        color: @black;
+      }
+    }
+    .ant-select-arrow{
+      .icon{
+        width: 13px;
+      }
     }
   }
+}
+
+.main-content{
+  .ant-layout-sider{
+    background: @sidebar-bg;
+  }
+  .right-content-wrapper{
+    min-height: calc(100vh - 60px);
+    background: @white;
+    padding: 15px 45px 0 45px;
+  }
+}
+
+.capx-card{
+  background: @card-bg;
+  border: 1px solid @black;
+  padding: 15px 25px;
+  border-radius: 5px;
+  margin-bottom: 15px;
 }
