--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -76,6 +76,23 @@ p{
   }
 }
 
+.ant-radio-wrapper{
+  font-size: 13px;
+  font-weight: 600;
+  .ant-radio{
+    .ant-radio-inner{
+      border-color: @black;
+    }
+    &.ant-radio-checked{
+      .ant-radio-inner{
+        &::after{
+          background: #DD4A4A;
+        }
+      }
+    }
+  }
+}
+
 .ant-select{
   &:not(.ant-select-customize-input){
     .ant-select-selector{
