initiated branch with restructured code

--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -1,4 +1,4 @@
-@import "../../assets/less/variables.less";
+@import "../../../assets/less/_variables";
 
 .header{
     background: @secondary-color;
