--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -1,36 +1,37 @@
-
 @white: #ffffff;
 @black: #000000;
 
-@primary-color: #1890ff; // primary color for all components
+@primary-color: #233039; // primary color for all components
 @secondary-color: #151517; 
-@link-color: #1890ff; // link color
-@success-color: #52c41a; // success state color
-@warning-color: #faad14; // warning state color
-@error-color: #f5222d; // error state color
-
-@background-primary: #fff;
-@background-secondary: #011B38;
-
-@button-color: #005C7F;
-
-@font-size-base: 14px; // major text font size
-@text-color-primary: #363636; // major text color
-@text-color-secondary: #000000; // secondary text color
-@heading-color: rgba(0, 0, 0, 0.85); // heading text color
-@text-color: rgba(0, 0, 0, 0.65); // major text color
-@disabled-color: rgba(0, 0, 0, 0.25); // disable state color
-@border-radius-base: 2px; // major border radius
-@border-color-base: #000000; // major border color
-@border-color-light: #151517;// major border color
-@box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
-
-//custom variables
+@success-color: #49C574;
+@warning-color: #7A5E34; // warning state color
+@red-color: #BF0000; // error state color
+@grey-color: #C4C4C4;
 
 @sidebar-bg: #FFF2F2;
 @tab-bg: #F8A6A6;
 @silver-bg: #FAFAFA;
 @card-bg: #FFF2F2;
 @light-bg: #FBFBFB;
-@tooltip-icon: #4D4D4D;
-@grey-color: #C4C4C4;
+@tooltip-icon: #8C8C8C;
+@menu-active: #233039;
+
+@font-family: 'Inter', sans-serif;
+@font-family-secondary: 'Ubuntu', sans-serif;
+@font-size-base: 14px;
+@font-size-xlg: @font-size-base + 4px; //18px
+@font-size-lg: @font-size-base + 2px; //16px
+@font-size-sm: @font-size-base - 2px; //12px
+
+@text-color-primary: #FFFFFF; // major text color
+@text-color-secondary: #B3B3B3; // secondary text color
+@text-white: #ffffff; // white text color
+@link-color: @primary-color; // link color
+@disabled-color: rgba(0, 0, 0, 0.1); // disable state color
+@border-radius-base: 4px; // major border radius
+@border-color-base: #404040; // major border color
+@border-color-light: #151517;
+@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
+
+@tab-gradient: linear-gradient(180deg, #97D10A -8.65%, #206300 100%);
+@card-gradient: linear-gradient(180deg, #272F28 0%, #121F18 100%);
