--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -1,18 +1,20 @@
 @import "../../../assets/less/_variables";
 
-.header{
-    background: @secondary-color;
-    color: @white;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .logo{
-        font-size: 26px;
-        height: 100%;
-    }
-    .top-bar-right{
-        font-size: 26px;
-        height: 100%;
+.ant-layout-header{
+    &.header{
+        background: @secondary-color;
+        color: @white;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .logo{
+            font-size: 26px;
+            height: 100%;
+        }
+        .top-bar-right{
+            font-size: 26px;
+            height: 100%;
+        }
     }
 }
