--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -1,7 +1,7 @@
 @import "../../../assets/less/_variables";
 
 .sidebar-inner{
-    background: @sidebar-bg;
+    background: @primary-color;
     width: 100%;
     max-width: 300px;
     height: calc(100vh - 60px);
@@ -13,36 +13,38 @@
             li{
                 margin-bottom: 15px;
                 a{
-                    color: @black;
-                    padding: 6px 15px;
+                    color: @text-white;
+                    padding: 10px 18px;
                     display: flex;
                     align-items: center;
                     border-radius: 40px;
-                    font-weight: 600;
+                    opacity: 0.5;
                     .icon{
                         fill: @grey-color;
-                        margin-right: 8px;
+                        margin-right: 10px;
+                        width: 18px;
                     }
                     &.selected{
-                        background: @white;
-
+                        background: @menu-active;
+                        font-weight: 600;
+                        opacity: 1;
                     }
                 }
             }
         }
     }
     .sidebar-bottom{
-        border-top: 1px solid @black;
-        margin-top: 3.5rem;
+        border-top: 1px solid @border-color-base;
+        margin-top: 5.5rem;
         padding-top: 2.5rem;
         a{
             display: block;
-            color: @black;
+            color: @text-color-primary;
             margin-bottom: 1.5rem;
             font-weight: 600;
             .icon{
                 width: 12px;
-                fill: @black;
+                fill: @text-color-primary;
                 margin-left: 5px;
             }
         }
