Update header UI

--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -15,6 +15,7 @@
 @light-bg: #FBFBFB;
 @tooltip-icon: #8C8C8C;
 @menu-active: #233039;
+@select-bg-primary: #262626;
 
 @font-family: 'Inter', sans-serif;
 @font-family-secondary: 'Ubuntu', sans-serif;
