--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -11,11 +11,13 @@
 @sidebar-bg: #151517;
 @tab-bg: #F8A6A6;
 @silver-bg: #FAFAFA;
-@card-bg: #FFF2F2;
 @light-bg: #FBFBFB;
 @tooltip-icon: #8C8C8C;
 @menu-active: #233039;
 @select-bg-primary: #262626;
+@select-bg-secondary: #233039;
+@dark-bg: #0B0C0C;
+@card-bg: #171C1F;
 
 @font-family: 'Inter', sans-serif;
 @font-family-secondary: 'Ubuntu', sans-serif;
@@ -26,6 +28,7 @@
 
 @text-color-primary: #FFFFFF; // major text color
 @text-color-secondary: #B3B3B3; // secondary text color
+@text-muted: #83A1A9;
 @text-white: #ffffff; // white text color
 @link-color: @primary-color; // link color
 @disabled-color: rgba(0, 0, 0, 0.1); // disable state color
@@ -33,6 +36,8 @@
 @border-color-base: #404040; // major border color
 @border-color-light: #151517;
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
+@border-dark-green: #4A6269;
+@border-card: #2A383C;
 
 @tab-gradient: linear-gradient(180deg, #97D10A -8.65%, #206300 100%);
 @card-gradient: linear-gradient(180deg, #272F28 0%, #121F18 100%);
