--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -1,7 +1,7 @@
 @import "../../../assets/less/_variables.less";
 
 .sidebar-inner {
-	background: @primary-color;
+	background: @secondary-color;
 	width: 100%;
 	max-width: 300px;
 	height: calc(100vh - 60px);
