Update card css

--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -18,6 +18,7 @@
 @select-bg-secondary: #233039;
 @dark-bg: #0B0C0C;
 @card-bg: #171C1F;
+@card-bg2: #172623;
 
 @font-family: 'Inter', sans-serif;
 @font-family-secondary: 'Ubuntu', sans-serif;
