--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -123,7 +123,25 @@ b, span{
     }
     .ant-select-arrow{
       .icon{
-        width: 13px;
+        width: 10px;
+        fill: @text-white;
+      }
+    }
+  }
+}
+
+.ant-select-dropdown{
+  &.capx-dropdown{
+    background: @card-bg;
+    padding: 3px;
+    border: 1px solid @border-dark-green;
+    border-radius: 0 0 16px 16px;
+    .ant-select-item{
+      font-weight: normal;
+      color: @text-white;
+      border-radius: 4px;
+      &.ant-select-item-option-active, .ant-select-item-option-selected{
+        background: #1D282F;
       }
     }
   }
