Dashboard Borrow card updated

--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -42,3 +42,5 @@
 
 @tab-gradient: linear-gradient(180deg, #97D10A -8.65%, #206300 100%);
 @card-gradient: linear-gradient(180deg, #272F28 0%, #121F18 100%);
+@btn-gradient: linear-gradient(356.23deg, #96CF03 -65.8%, #F1FFF6 89%);
+@btn-cancel-gradient: linear-gradient(0deg, #943737 -47.12%, #6A3434 100%);
