--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -13,3 +13,5 @@
 @import "./utilities/fonts/fonts.less";
 
 @import "./custom.less";
+
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap';
