Dashboard UI Updated

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -110,10 +110,11 @@ b, span{
       }
       .ant-select-selection-item{
         line-height: 38px;
+        color: @text-white;
       }
       .ant-select-selection-placeholder{
         line-height: 38px;
-        color: @black;
+        color: @text-white;
       }
     }
     &:hover, &:focus{
