--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -43,8 +43,27 @@
         margin-bottom: 0;
         font-weight: 700;
     }
-    .ant-select{
-        float: right;
+    .left-col{
+        padding-bottom: 20px;
+        .ant-select{
+            .ant-select-selector{
+                color: #A1A1A1;
+                .ant-select-selection-placeholder{
+                    color: #A1A1A1;
+                }
+            }
+            .ant-select-arrow{
+                .icon{
+                    fill: #A1A1A1;
+                }
+            }
+        }
+    }
+    .right-col{
+        padding-bottom: 20px;
+        .ant-select{
+            float: right;
+        }
     }
 }
 
