--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -45,26 +45,20 @@
 		margin-top: 5.5rem;
 		padding-top: 2.5rem;
 		a {
-			display: block;
+			display: flex;
+            align-items: center;
 			color: @text-color-primary;
 			margin-bottom: 1.5rem;
 			margin-left: 1rem;
 			font-weight: 600;
 			.icon {
-				width: 12px;
+				width: 24px;
 				fill: @text-color-primary;
 				margin-left: 5px;
 			}
 
 			&:hover {
 				text-decoration: underline;
-			}
-		}
-		.sidebar-icon {
-			&.icon {
-				width: 24px;
-				height: 24px;
-				margin-left: 8px;
 			}
 		}
 	}
