added metamask functionality

--- a/src/containers/Dashboard/LendTab/index.less
+++ b/src/containers/Dashboard/LendTab/index.less
@@ -1,6 +1,5 @@
-@import "../../../assets/less/_variables";
+@import "../../../assets/less/_variables.less";
 
-
-.test-class{
-  display: flex;
+.test-class {
+	display: flex;
 }
