--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -2,34 +2,34 @@
 @black: #000000;
 
 @primary-color: #233039; // primary color for all components
-@secondary-color: #151517; 
-@success-color: #49C574;
-@warning-color: #7A5E34; // warning state color
-@red-color: #BF0000; // error state color
-@grey-color: #C4C4C4;
+@secondary-color: #151517;
+@success-color: #49c574;
+@warning-color: #7a5e34; // warning state color
+@red-color: #bf0000; // error state color
+@grey-color: #c4c4c4;
 
 @sidebar-bg: #151517;
-@tab-bg: #F8A6A6;
-@silver-bg: #FAFAFA;
-@light-bg: #FBFBFB;
-@tooltip-icon: #8C8C8C;
+@tab-bg: #f8a6a6;
+@silver-bg: #fafafa;
+@light-bg: #fbfbfb;
+@tooltip-icon: #8c8c8c;
 @menu-active: #233039;
 @select-bg-primary: #262626;
 @select-bg-secondary: #233039;
-@dark-bg: #0B0C0C;
-@card-bg: #171C1F;
+@dark-bg: #0b0c0c;
+@card-bg: #171c1f;
 @card-bg2: #172623;
 
-@font-family: 'Inter', sans-serif;
-@font-family-secondary: 'Ubuntu', sans-serif;
+@font-family: "Inter", sans-serif;
+@font-family-secondary: "Ubuntu", sans-serif;
 @font-size-base: 14px;
 @font-size-xlg: @font-size-base + 4px; //18px
 @font-size-lg: @font-size-base + 2px; //16px
 @font-size-sm: @font-size-base - 2px; //12px
 
-@text-color-primary: #FFFFFF; // major text color
-@text-color-secondary: #B3B3B3; // secondary text color
-@text-muted: #83A1A9;
+@text-color-primary: #ffffff; // major text color
+@text-color-secondary: #b3b3b3; // secondary text color
+@text-muted: #83a1a9;
 @text-white: #ffffff; // white text color
 @link-color: @primary-color; // link color
 @disabled-color: rgba(0, 0, 0, 0.1); // disable state color
@@ -37,10 +37,14 @@
 @border-color-base: #404040; // major border color
 @border-color-light: #151517;
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
-@border-dark-green: #4A6269;
-@border-card: #2A383C;
+@border-dark-green: #4a6269;
+@border-card: #2a383c;
 
-@tab-gradient: linear-gradient(180deg, #97D10A -8.65%, #206300 100%);
-@card-gradient: linear-gradient(180deg, #272F28 0%, #121F18 100%);
-@btn-gradient: linear-gradient(356.23deg, #96CF03 -65.8%, #F1FFF6 89%);
-@btn-cancel-gradient: linear-gradient(0deg, #943737 -47.12%, #6A3434 100%);
+@tab-gradient: linear-gradient(180deg, #97d10a -8.65%, #206300 100%);
+@card-gradient: linear-gradient(180deg, #272f28 0%, #121f18 100%);
+@btn-gradient: linear-gradient(356.23deg, #96cf03 -65.8%, #f1fff6 89%);
+@btn-cancel-gradient: linear-gradient(0deg, #943737 -47.12%, #6a3434 100%);
+
+// Responsive Media Queries
+@desktop: ~"only screen and (min-width: 1440px) and (max-width: 1919px)";
+@upper: ~"only screen and (min-width: 1920px)";
