--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -90,6 +90,7 @@
                     padding: 0 10px;
                     height: 34px;
                     border-radius: 8px;
+                    color: @text-white;
                     span{
                         height: 34px;
                         line-height: 34px;
