--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -1,1 +1,105 @@
+@import "../../assets/less/_variables.less";
 
+.lendborrow-wrapper{
+    display: flex;
+    width: 100%;
+    .lendborrow-left{
+        width: 100%;
+        .groupwith-select{
+            .ant-input{
+                border-radius: 8px 0 0 8px;
+                border-right: 0;
+            }
+            .ant-select{
+                .ant-select-selector{
+                    border-radius: 0 8px 8px 0;
+                }
+            }
+        }
+        .loanassets-select{
+            .ant-btn{
+                height: 100%;
+                height: 40px;
+                color: @text-white;
+                border-radius: 0 8px 8px 0;
+                padding: 0 5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-color: @border-dark-green;
+                border-left: 0;
+                .icon{
+                    width: 20px;
+                    margin-right: 4px;
+                }
+            }
+        }
+    }
+    .lendborrow-right{
+        background: @primary-color;
+        border-radius: 7px;
+        border: 1px solid @border-color-base;
+        width: 100%;
+        max-width: 550px;
+        .summary-head{
+            border-bottom: 1px solid @border-color-base;
+            margin: 0 24px 15px;
+            padding: 15px 0;
+            h3{
+                font-size: 22px;
+                margin-bottom: 0;
+            }
+            p{
+                font-size: 14px;
+                margin-bottom: 0;
+                color: @text-color-secondary;
+            }
+        }
+        .summary-content{
+            ul{
+                padding-left: 0;
+                li{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 3px 24px;
+                    width: 100%;
+                    font-size: 15px;
+                    label{
+                        font-weight: normal;
+                    }
+                    span{
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+        .summary-footer{
+            display: flex;
+            align-items: center;
+            padding: 12px 24px;
+            border-top: 1px solid @border-color-base;
+            margin-top: auto;
+            .left{
+                border-right: 1px solid @border-color-base;
+                margin-right: 30px;
+                padding-right: 20px;
+                min-width: 140px;
+                small{
+                    color: @text-color-secondary;
+                }
+                h2{
+                    margin-bottom: 0;
+                    font-size: 30px;
+                    font-weight: 600;
+                }
+            }
+            .right{
+                width: 100%;
+                .ant-btn{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
