--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -5,6 +5,17 @@
     width: 100%;
     .lendborrow-left{
         width: 100%;
+        padding-right: 50px;
+        .best-offer-link{
+            font-weight: normal;
+            padding: 0;
+            color: @text-color-secondary;
+            font-size: @font-size-base - 1;
+            line-height: 1.1;
+            span{
+                border-bottom: 1px solid @text-color-secondary;
+            }
+        }
         .groupwith-select{
             .ant-input{
                 border-radius: 8px 0 0 8px;
@@ -34,13 +45,91 @@
                 }
             }
         }
+        .loanassets-group{
+            .ant-btn{
+                height: 100%;
+                height: 40px;
+                color: @text-color-secondary;
+                border-radius: 0 8px 8px 0;
+                padding: 0 5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-color: @border-dark-green;
+                border-left: 0;
+                pointer-events: none;
+                .icon{
+                    width: 20px;
+                    margin-right: 4px;
+                }
+            }
+        }
+        .lb-label{
+            color: @text-color-secondary;
+            font-weight: 600;
+            display: block;
+            margin-bottom: 3px;
+            .tooltip-icon{
+                fill: @tooltip-icon;
+                display: inline-block;
+                margin-bottom: -2px;
+                margin-left: 4px;
+                width: 14px;
+            }
+            .align-right{
+                float: right;
+            }
+        }
+        .slider-capx{
+            .ant-slider-mark{
+                width: calc(100% - 15px);
+                left: 4px;
+                .ant-slider-mark-text{
+                    font-size: 0;
+                    margin-top: 5px;
+                    &.ant-slider-mark-text-active{
+                        color: @text-color-secondary;   
+                    }
+                }
+            }
+            .ant-slider-rail{
+                background-color: @text-color-secondary;
+            }
+            .ant-slider-track{
+                background: @success-color;
+            }
+            .ant-slider-step{
+                position: initial;
+                .ant-slider-dot{
+                    width: 3px;
+                    height: 18px;
+                    background: @text-color-secondary;
+                    border-radius: 50%;
+                    border-radius: 3px;
+                    border: 0;
+                    &.ant-slider-dot-active{
+                        background: @success-color;
+                    }
+                }
+            }
+            .ant-slider-handle{
+                width: 24px;
+                height: 24px;
+                border-radius: 24px;
+                margin-top: -13px;
+                border: 0;
+                background: @success-color;
+            }
+        }
     }
     .lendborrow-right{
         background: @primary-color;
         border-radius: 7px;
         border: 1px solid @border-color-base;
         width: 100%;
-        max-width: 550px;
+        max-width: 500px;
+        display: flex;
+        flex-direction: column;
         .summary-head{
             border-bottom: 1px solid @border-color-base;
             margin: 0 24px 15px;
@@ -87,11 +176,15 @@
                 min-width: 140px;
                 small{
                     color: @text-color-secondary;
+                    &:last-child{
+                        font-weight: 500;
+                    }
                 }
                 h2{
                     margin-bottom: 0;
                     font-size: 30px;
                     font-weight: 600;
+                    line-height: 1;
                 }
             }
             .right{
