Update borrow lend page ui

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -242,3 +242,23 @@ b {
     }
   }
 }
+
+.ant-slider-tooltip{
+	padding-bottom: 0;
+	.ant-tooltip-content{
+		.ant-tooltip-inner{
+			background-color: @success-color;
+			color: @secondary-color;
+			font-size: 14px;
+			font-weight: 600;
+			padding: 0 8px;
+			height: 20px;
+			line-height: 20px;
+			min-height: 20px;
+			border-radius: 1px;
+		}
+		.ant-tooltip-arrow-content{
+			display: none;
+		}
+	}
+}
