--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -64,6 +64,24 @@
                 }
             }
         }
+        .insufficient-loan-error{
+            background: #431E1E;
+            border: 1px solid #932E2E;
+            border-radius: 7px;
+            height: 30px;
+            line-height: 30px;
+            color: @text-white;
+            padding: 0 10px;
+            font-weight: 400;
+            font-size: @font-size-base - 1;
+            display: inline-block;
+            margin-top: 5px;
+            .icon{
+                fill: @text-white;
+                margin-right: 6px;
+                margin-bottom: -1px;
+            }
+        }
         .lb-label{
             color: @text-color-secondary;
             font-weight: 600;
