--- a/src/containers/Metamask/index.less
+++ b/src/containers/Metamask/index.less
@@ -8,7 +8,7 @@
 	top: 7.5rem;
 	position: relative;
 	padding: 4rem;
-	border-radius: 12px;
+	border-radius: 2rem;
 	margin: auto;
 	background: linear-gradient(
 		270.08deg,
@@ -16,7 +16,7 @@
 		rgba(18, 28, 32, 0.3) 117.26%
 	);
 	width: 50vw;
-	height: 45vh;
+	height: 40vh;
 
 	.header {
 		font-size: 32px;
