Update lend borrow sections

--- a/src/containers/Lend-Borrow/ViewProjects/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/index.less
@@ -382,6 +382,9 @@
     background: @black;
     color: @white;
     font-weight: bold;
+    &:hover, &:focus{
+        background: @primary-color;
+    }
     span{
         color: @white;
     }
