--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -120,6 +120,9 @@ b {
   &:focus{
     border-color: @success-color;
   }
+  &.ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input, &.ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover{
+	background: @select-bg-secondary;
+  }
 }
 
 .ant-select{
@@ -156,6 +159,9 @@ b {
         fill: @text-white;
       }
     }
+  }
+  &.ant-select-status-error.ant-select:not(.ant-select-disabled):not(.ant-select-customize-input).ant-select-open .ant-select-selector{
+	background: @select-bg-secondary;
   }
 }
 
