update code for new setup

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1,6 +1,6 @@
 
 //Core Variables
-@import "./_variables";
+@import "./variables";
 
 //Grid System and some useful utilities
 @import "./plugins/grid/grid.less";
