--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -1,4 +1,4 @@
-@import "../../../assets/less/_variables.less";
+@import "../../../assets/less/variables.less";
 
 .ant-layout-header{
     &.header{
