--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -1,4 +1,4 @@
-@import "../../../assets/less/_variables.less";
+@import "../../../assets/less/variables.less";
 
 .sidebar-inner {
 	background: @secondary-color;
