--- a/src/components/views/Dashboard/LendTab/index.less
+++ b/src/components/views/Dashboard/LendTab/index.less
@@ -1,5 +1,1 @@
-@import "../../../assets/less/variables.less";
-
-.test-class {
-	display: flex;
-}
+@import "../../../../assets/less/variables.less";
