--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -5,13 +5,9 @@
 //Grid System and some useful utilities
 @import "./plugins/grid/grid.less";
 
-
-//Partials elements
-@import "./partials/navbar/navbar.less";
-
 //Utilities
 @import "./utilities/fonts/fonts.less";
 
 @import "./custom.less";
 
-@import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap';
+// @import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap';
