--- a/src/components/views/Lend-Borrow/ViewProjects/BorrowTabLB/index.less
+++ b/src/components/views/Lend-Borrow/ViewProjects/BorrowTabLB/index.less
@@ -1,4 +1,4 @@
-@import "../../../../assets/less/variables.less";
+@import "../../../../../assets/less/variables.less";
 
 .action-btn{
     background: @btn-gradient;
