--- a/src/components/views/Lend-Borrow/index.less
+++ b/src/components/views/Lend-Borrow/index.less
@@ -1,4 +1,4 @@
-@import "../../assets/less/variables.less";
+@import "../../../assets/less/variables.less";
 
 .lendborrow-wrapper{
     display: flex;
