--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -10,4 +10,4 @@
 
 @import "./custom.less";
 
-// @import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap';
