lend dashboard integrations

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -135,6 +135,7 @@
                 border-radius: 20px;
                 margin-right: 10px;
                 font-weight: 500;
+                color: @text-white;
                 display: inline-block;
                 &:last-child{
                     margin-right: 0;
@@ -168,7 +169,7 @@
                     background: #238B92;
                     border-color: #238B92;
                 }
-                &.badge-pending{
+                &.badge-initiated{
                     background: #7A5E34;
                     border-color: #7A5E34;
                 }
