--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -33,6 +33,7 @@
 @text-white: #ffffff; // white text color
 @link-color: @primary-color; // link color
 @disabled-color: rgba(0, 0, 0, 0.1); // disable state color
+@subtext-color: #ABABAB;
 @border-radius-base: 4px; // major border radius
 @border-color-base: #404040; // major border color
 @border-color-light: #151517;
