fixed capx card padding issue

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -269,7 +269,7 @@
 		border: 1px solid @border-color-base;
 		border-top: 0;
 		border-radius: 0 0 16px 16px;
-		margin-top: -12px;
+		margin-top: -2.5rem;
 		.additional-info-inner {
 			padding: 38px 25px 20px 25px;
 			h3 {
