Borrow Form States and Validations

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -241,6 +241,11 @@ b {
       }
     }
   }
+	
+  .ant-checkbox-disabled+span {
+	color: rgba(255, 255, 255, 0.5);
+	cursor: not-allowed;
+   }
 }
 
 .ant-slider-tooltip{
