--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -77,12 +77,12 @@
 		li {
 			position: relative;
 			p {
-				font-size: 15px;
+				font-size: 16px;
 				margin-bottom: 0;
 				color: @text-muted;
 			}
 			h4 {
-				font-size: 20px;
+				font-size: 26px;
 				margin-bottom: 0;
 			}
 		}
@@ -104,6 +104,7 @@
 		display: flex;
 		justify-content: space-between;
 		.upper-left {
+			font-size: 20px;
 			b {
 				font-weight: 600;
 			}
@@ -112,7 +113,7 @@
 				display: inline-block;
 				margin-bottom: -2px;
 				margin-left: 4px;
-				width: 14px;
+				width: 20px;
 			}
 			.helthfactor-title {
 				color: #abfab6;
@@ -128,7 +129,7 @@
 			.badge {
 				background: @light-bg;
 				border: 1px solid @border-color-light;
-				font-size: 14px;
+				font-size: 16px;
 				height: 32px;
 				line-height: 32px;
 				padding: 0 20px;
@@ -183,6 +184,8 @@
 	.collapsed-content.expanded {
 		opacity: 1;
 		display: block;
+		transition: opacity 1s ease-in;
+		margin-top: -2.5rem;
 	}
 	.ordercard-bottom-4 {
 		position: relative;
@@ -213,11 +216,11 @@
 					padding-left: 0;
 				}
 				p {
-					font-size: 15px;
+					font-size: 16px;
 					margin-bottom: 0;
 				}
 				h4 {
-					font-size: 17px;
+					font-size: 20px;
 					margin-bottom: 0;
 					font-weight: 600;
 				}
@@ -253,11 +256,11 @@
 					padding-left: 0;
 				}
 				p {
-					font-size: 15px;
+					font-size: 16px;
 					margin-bottom: 0;
 				}
 				h4 {
-					font-size: 17px;
+					font-size: 20px;
 					margin-bottom: 0;
 					font-weight: 600;
 				}
@@ -270,6 +273,7 @@
 		border-top: 0;
 		border-radius: 0 0 16px 16px;
 		margin-top: -2.5rem;
+		margin-bottom: 2rem;
 		.additional-info-inner {
 			padding: 38px 25px 20px 25px;
 			h3 {
@@ -318,7 +322,7 @@
 				}
 				.additionalinfo-right {
 					width: 100%;
-					max-width: 350px;
+					max-width: 450px;
 					border-left: 1px solid @border-card;
 					display: flex;
 					align-items: center;
