major styling fixes

--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -51,6 +51,7 @@
 			}
 			.ant-select {
 				&.coin-select {
+					width: 9rem;
 					.ant-select-selector {
 						padding: 0 10px;
 						height: 34px;
@@ -66,6 +67,10 @@
 							color: @text-white;
 							.svg-icon {
 								margin-right: 8px;
+							}
+							&.ant-select-item-option-active,
+							.ant-select-item-option-selected {
+								background: #1d282f;
 							}
 						}
 						.ant-select-selection-item {
