--- a/src/containers/Lend-Borrow/ViewProjects/LendTabLB/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/LendTabLB/index.less
@@ -3,3 +3,23 @@
 .test-class {
 	display: flex;
 }
+
+.filter-container {
+	display: flex;
+	.select-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		.capx-dropdown {
+			width: 10px;
+			&:hover {
+				border-color: none !important;
+				box-shadow: none !important;
+			}
+		}
+		p {
+			margin-bottom: 0;
+		}
+	}
+}
