--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -66,36 +66,36 @@ p {
 }
 
 b {
-  color: @text-color-primary;
+	color: @text-color-primary;
 }
 
-.ant-btn{
-  &.ant-btn-primary{
-    background: @primary-color;
-    border: 1px solid @border-color-base;
-    color: @black;
-    border-radius: 4px;
-  }
-  &.ant-btn-secondary{
-    background: @btn-gradient;
-    height: 40px;
-    line-height: 40px;
-    padding: 0 20px;
-    color: @secondary-color;
-	
-    font-weight: bold;
-    &.ant-btn-lg{
-      height: 50px;
-      line-height: 50px;
-      padding: 0 30px;
-    }
-  }
+.ant-btn {
+	&.ant-btn-primary {
+		background: @primary-color;
+		border: 1px solid @border-color-base;
+		color: @black;
+		border-radius: 4px;
+	}
+	&.ant-btn-secondary {
+		background: @btn-gradient;
+		height: 40px;
+		line-height: 40px;
+		padding: 0 20px;
+		color: @secondary-color;
+
+		font-weight: bold;
+		&.ant-btn-lg {
+			height: 50px;
+			line-height: 50px;
+			padding: 0 30px;
+		}
+	}
 }
 
 .ant-radio-wrapper {
 	font-size: 13px;
 	font-weight: normal;
-  color: @text-white;
+	color: @text-white;
 	.ant-radio {
 		.ant-radio-inner {
 			border-color: @border-dark-green;
@@ -110,69 +110,72 @@ b {
 		}
 	}
 
-	.ant-radio-disabled+span {
+	.ant-radio-disabled + span {
 		color: rgba(255, 255, 255, 0.5);
 		cursor: not-allowed;
 	}
 }
 
-.ant-input{
-  height: 40px;
-  line-height: 40px;
-  background-color: @select-bg-secondary;
-  color: @text-white;
-  border: 1px solid @border-dark-green;
-  border-radius: 6px;
-  &:focus{
-    border-color: @success-color;
-  }
+.ant-input {
+	height: 40px;
+	line-height: 40px;
+	background-color: @select-bg-secondary;
+	color: @text-white;
+	border: 1px solid @border-dark-green;
+	border-radius: 6px;
+	&:focus {
+		border-color: @success-color;
+	}
 }
 
-.ant-input-disabled{
+.ant-input-disabled {
 	//   background-color: @select-bg-secondary !important;
-  	// 	color: white;
-//   border: 1px solid @border-dark-green;
-//   border-radius: 6px;
+	// 	color: white;
+	//   border: 1px solid @border-dark-green;
+	//   border-radius: 6px;
 }
 
-.ant-select{
-  &:not(.ant-select-customize-input){
-    .ant-select-selector{
-      height: 40px;
-      line-height: 40px;
-      background-color: @select-bg-secondary;
-      color: @text-white;
-      border: 1px solid @border-dark-green;
-      border-radius: 6px;
-      input{
-        height: 40px !important;
-        line-height: 100%;
-      }
-      .ant-select-selection-item{
-        line-height: 38px;
-        color: @text-white;
-      }
-      .ant-select-selection-placeholder{
-        line-height: 38px;
-        color: @text-white;
-      }
-    }
-    &:hover, &:focus{
-      .ant-select-selector{
-        border-color: @success-color !important;
-        box-shadow: none !important;
-      }
-    }
-    .ant-select-arrow{
-      .icon{
-        width: 10px;
-        fill: @text-white;
-      }
-    }
-  }
+.ant-select {
+	&:not(.ant-select-customize-input) {
+		.ant-select-selector {
+			height: 40px;
+			line-height: 40px;
+			background-color: @select-bg-secondary;
+			color: @text-white;
+			border: 1px solid @border-dark-green;
+			border-radius: 6px;
+			input {
+				height: 40px !important;
+				line-height: 100%;
+			}
+			.ant-select-selection-item {
+				font-size: 16px;
+				line-height: 38px;
+				color: @text-white;
+			}
+			.ant-select-selection-placeholder {
+				line-height: 38px;
+				color: @text-white;
+			}
+		}
+		&:hover,
+		&:focus {
+			.ant-select-selector {
+				border-color: @success-color !important;
+				box-shadow: none !important;
+			}
+		}
+		.ant-select-arrow {
+			.icon {
+				width: 10px;
+				fill: @text-white;
+			}
+		}
+	}
 }
 
-.ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+.ant-select-disabled.ant-select:not(.ant-select-customize-input)
+	.ant-select-selector {
 	color: rgba(0, 0, 0, 0.1);
 	background: #192229;
 	cursor: not-allowed;
@@ -238,39 +241,39 @@ b {
 	margin-bottom: 15px;
 }
 
-.ant-checkbox-wrapper{
-  color: @text-white;
-  .ant-checkbox{
-    top: 0.32em;
-    .ant-checkbox-inner{
-      border-color: @border-dark-green;
-      width: 20px;
-      height: 20px;
-      &::after{
-        top: 52%;
-        left: 24.5%;
-      }
-    }
-    &.ant-checkbox-checked{
-      .ant-checkbox-inner{
-        background-color: @white;
-        &::after{
-          border-color: @border-dark-green;
-        }
-      }
-    }
-  }
-	
-  .ant-checkbox-disabled+span {
-	color: rgba(255, 255, 255, 0.5);
-	cursor: not-allowed;
-   }
+.ant-checkbox-wrapper {
+	color: @text-white;
+	.ant-checkbox {
+		top: 0.32em;
+		.ant-checkbox-inner {
+			border-color: @border-dark-green;
+			width: 20px;
+			height: 20px;
+			&::after {
+				top: 52%;
+				left: 24.5%;
+			}
+		}
+		&.ant-checkbox-checked {
+			.ant-checkbox-inner {
+				background-color: @white;
+				&::after {
+					border-color: @border-dark-green;
+				}
+			}
+		}
+	}
+
+	.ant-checkbox-disabled + span {
+		color: rgba(255, 255, 255, 0.5);
+		cursor: not-allowed;
+	}
 }
 
-.ant-slider-tooltip{
+.ant-slider-tooltip {
 	padding-bottom: 0;
-	.ant-tooltip-content{
-		.ant-tooltip-inner{
+	.ant-tooltip-content {
+		.ant-tooltip-inner {
 			background-color: @success-color;
 			color: @secondary-color;
 			font-size: 14px;
@@ -281,7 +284,7 @@ b {
 			min-height: 20px;
 			border-radius: 1px;
 		}
-		.ant-tooltip-arrow-content{
+		.ant-tooltip-arrow-content {
 			display: none;
 		}
 	}
