--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -4,7 +4,7 @@
 	background: @secondary-color;
 	width: 100%;
 	max-width: 300px;
-	height: calc(100vh - 60px);
+	height: 100vh;
 	padding: 40px 30px;
 	border-right: 1px solid #404040;
 	transition: all ease-in-out 0.4s;
