--- a/src/containers/Liquidation/index.less
+++ b/src/containers/Liquidation/index.less
@@ -1,1 +1,21 @@
 @import "../../assets/less/_variables.less";
+
+.filter-container {
+	display: flex;
+	.select-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		.capx-dropdown {
+			width: 10px;
+			&:hover {
+				border-color: none !important;
+				box-shadow: none !important;
+			}
+		}
+		p {
+			margin-bottom: 0;
+		}
+	}
+}
