chain dropwdown styled

--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -133,7 +133,11 @@
 				}
 			}
 			&.ant-select-item-option-selected {
-				background: @select-bg-primary;
+				background: @border-color-base;
+				color: @text-muted;
+			}
+			&.ant-select-item-option-active {
+				background: @select-bg-secondary;
 			}
 		}
 	}
