accordion card font fixes and eth icon changed

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -45,11 +45,12 @@
 	}
 	.left-col {
 		padding-bottom: 20px;
+		max-width: 100%;
 		.ant-select {
 			.ant-select-selector {
 				color: #a1a1a1;
 				background-color: #a1a1a1;
-				width: 6rem;
+				width: 7.5rem;
 				margin: 0 0.5rem 0 1rem;
 				padding: 0 0 0 0.5rem;
 				.ant-select-selection-placeholder {
@@ -69,6 +70,7 @@
 	}
 	.right-col {
 		padding-bottom: 20px;
+		max-width: fit-content;
 		.ant-select {
 			float: right;
 		}
@@ -144,6 +146,7 @@
 				width: 20px;
 			}
 			.helthfactor-title {
+				margin-left: 7.5rem;
 				color: #abfab6;
 				b {
 					color: #abfab6;
