--- a/src/containers/Lend-Borrow/ViewProjects/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/index.less
@@ -115,6 +115,7 @@
 				width: 18px;
 			}
 			.helthfactor-title {
+				margin-left: 7.5rem;
 				color: #abfab6;
 				b {
 					color: #abfab6;
@@ -376,12 +377,13 @@
 }
 
 .action-outline-btn {
-	border: 1px solid @btn-gradient;
+	border: 1px solid #97d10a;
 	background: @black;
 	color: @white;
 	font-weight: bold;
 	&:hover,
 	&:focus {
+		border: 1px solid #97d10a;
 		background: @primary-color;
 	}
 	span {
